--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
+    "@geist-ui/icons": "^1.0.2",
     "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^4.2.1",
     "next": "12.2.0",
     "next-auth": "^4.8.0",
     "react": "18.2.0",
